@@ -56,7 +56,6 @@ Implement SASLprep (RFC 4013) for LDAP (draft-ietf-ldapbis-*)
 Implement additional matching rules (RFC 3698)
 Add dumpasn1 logging support
 Add tests to test suite
-Add jail(2) support
 Recode linked-list structs to use <ldap_queue.h> macros
 Convert utfconv.txt into man page(s).
 Update manual pages as needed.
